# russianinfra

./: .gitignore  README.md  SECURITY.md  build_data_pipeline.py  combine_infrastructure_sources.py  derive_countries_from_boundaries.py  enrich_translations_and_categories.py  extract_military_kml_text.py  extract_nightwatch_map.py  extract_osint_varta_archive.py  extract_russia_oil_power_map.py  generate_change_report.py  normalize_infrastructure_data.py  package.json  prepare_web_data.py  pyproject.toml
.github/workflows/: daily-data-collection.yml
data_package/: manifest.json
data_package/build_history/: latest_manifest.json
scripts/: test.ps1
src/russianinfra/: __init__.py  build_data_pipeline.py  derive_countries_from_boundaries.py  extract_osint_varta_archive.py  extract_russia_oil_power_map.py  generate_change_report.py  normalize_infrastructure_data.py  prepare_web_data.py
tests/: test_pipeline.py
web/: app.js  deepstate-layer-config.json  index.html  server.mjs  styles.css
web/data/: diff_report.json  energy_facilities.geojson  energy_oil.geojson  manifest.json  military_boundaries.geojson  military_sites.geojson  other_infrastructure.geojson  power_facilities.geojson  transport_other.geojson  transport_rail_part006.geojson
web/test/: app.test.mjs
